--- a/BashShop/MainWindow.xaml
+++ b/BashShop/MainWindow.xaml
@@ -5,33 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BashShop"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Rectangle Fill="#CBB790" HorizontalAlignment="Left" Height="434" Stroke="Black" VerticalAlignment="Center" Width="150"/>
-        <Rectangle Fill="#BEA36E" HorizontalAlignment="Left" Height="60" Stroke="Black" VerticalAlignment="Top" Width="150"/>
-        <Button Content="Главная" Background="#BEA36E" HorizontalAlignment="Left" Margin="20,115,0,0" VerticalAlignment="Top" Height="30" Width="110"/>
-        <Button Content="О нас" Background="#BEA36E" HorizontalAlignment="Left" Margin="20,250,0,0" VerticalAlignment="Top" Height="30" Width="110"/>
-        <Button Content="Каталог" Background="#BEA36E" HorizontalAlignment="Left" Margin="20,205,0,0" VerticalAlignment="Top" Height="30" Width="110"/>
-        <Button Content="Домашная" Background="#BEA36E" HorizontalAlignment="Left" Margin="20,160,0,0" VerticalAlignment="Top" Height="30" Width="110"/>
+        Title="MainWindow" Height="550" Width="800" ResizeMode="NoResize">
+    <Grid x:Name="MainRoot">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="149*"/>
+            <ColumnDefinition Width="651*"/>
+        </Grid.ColumnDefinitions>
+        <Frame x:Name="MainFrame" Source="/Pages/CatalogPage.xaml" NavigationUIVisibility="Hidden" Grid.Column="1"/>
+        <Rectangle Fill="#CBB790" HorizontalAlignment="Center" Height="534" Stroke="Black" VerticalAlignment="Center" Width="150"/>
+        <Rectangle Fill="#BEA36E" HorizontalAlignment="Center" Height="60" Stroke="Black" VerticalAlignment="Top" Width="150"/>
+        <Button x:Name="About_UsBtn" Style="{DynamicResource ButtonStyle}" Content="О нас" Background="#BEA36E" HorizontalAlignment="Center" Margin="0,250,0,0" VerticalAlignment="Top" Height="30" Width="110" Click="About_Us_Click" />
+        <Button x:Name="CatalogBtn" Style="{DynamicResource ButtonStyle}" Content="Каталог" Background="#BEA36E" HorizontalAlignment="Center" Margin="0,205,0,0" VerticalAlignment="Top" Height="30" Width="110" Click="Catalog_Click" />
+        <Button x:Name="HomePageBtn" Style="{DynamicResource ButtonStyle}" Content="Домашная" Background="#BEA36E" HorizontalAlignment="Center" Margin="0,160,0,0" VerticalAlignment="Top" Height="30" Width="110" Click="HomePage_Click"/>
         <Label Content="Bash" FontWeight="Bold" HorizontalAlignment="Left" Margin="25,2,0,0" VerticalAlignment="Top" FontSize="36" FontFamily="Kurale"/>
-        <Image Source="logo.jpg" Width="150" Height="150" Margin="625,15,25,270"/>
-        <Label Content="Добро пожаловать" FontWeight="Bold" FontSize="28" HorizontalAlignment="Left" Margin="296,33,0,0" VerticalAlignment="Top"/>
-        <TextBox Background="#F4E8D0" HorizontalAlignment="Left" Margin="228,132,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Имя" FontWeight="Bold" HorizontalAlignment="Left" Margin="230,105,0,0" VerticalAlignment="Top"/>
-        <TextBox Background="#F4E8D0" HorizontalAlignment="Left" Margin="230,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Телефон" FontWeight="Bold" HorizontalAlignment="Left" Margin="232,158,0,0" VerticalAlignment="Top"/>
-        <TextBox Background="#F4E8D0" HorizontalAlignment="Left" Margin="465,130,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Фамилия" FontWeight="Bold" HorizontalAlignment="Left" Margin="467,105,0,0" VerticalAlignment="Top"/>
-        <TextBox Background="#F4E8D0" HorizontalAlignment="Left" Margin="465,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Имя" FontWeight="Bold" HorizontalAlignment="Left" Margin="467,160,0,0" VerticalAlignment="Top"/>
-        <TextBox Background="#F4E8D0" HorizontalAlignment="Left" Margin="465,353,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Телефон" FontWeight="Bold" HorizontalAlignment="Left" Margin="465,325,0,0" VerticalAlignment="Top"/>
-        <TextBox Background="#F4E8D0" HorizontalAlignment="Left" Margin="465,295,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Дата рождения" FontWeight="Bold" HorizontalAlignment="Left" Margin="465,270,0,0" VerticalAlignment="Top"/>
-        <TextBox Background="#F4E8D0" HorizontalAlignment="Left" Margin="465,240,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Отчество" FontWeight="Bold" HorizontalAlignment="Left" Margin="467,215,0,0" VerticalAlignment="Top"/>
-        <Button Content="Войти" Background="#BEA36E" HorizontalAlignment="Left" Margin="265,230,0,0" VerticalAlignment="Top" Width="50" Height="20"/>
-        <Button Content="Зарегистрироваться" Background="#BEA36E" HorizontalAlignment="Left" Margin="465,394,0,0" VerticalAlignment="Top" Height="20" Width="125"/>
-
     </Grid>
 </Window>
