--- a/BashShop/Pages/AboutUsPage.xaml
+++ b/BashShop/Pages/AboutUsPage.xaml
@@ -24,16 +24,17 @@
                             <TextBlock 
                                 Text="{Binding NameUs}" 
                                 FontWeight="Bold" 
-                                FontSize="18" 
+                                FontSize="15" 
                                 Margin="5"
                                 Width="300"
                                 TextAlignment="Left" 
                                 Background="Transparent"/>
-                            <TextBlock 
+                            <TextBlock
                                 Text="{Binding Review}" 
                                 FontSize="10" 
                                 Margin="10,30"
                                 Width="300"
+                                Height="200"
                                 TextAlignment="Left" 
                                 TextWrapping="Wrap"
                                 Background="Transparent"/>
